# piecewise

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  stack.yaml
compiler/: .gitignore  makefile
compiler-rkt/piecewise/: eval.rkt  info.rkt  langs.rkt  main.rkt
compiler/src/: main.mlb  main.sml  parser.grm
compiler/src/eval/: cek_ast.sml  value.sml
compiler/src/ir/: anf.sml  argv.sml  ast.sml  astmt.sml  convert_lenv.sml  cps.sml  cst.sml  desugar_binds.sml  dnf.sml  expr.sml  flat_ast.sml  higher_order_expr.sml  primop.sml  stmt.sml  triv.sml  type.sml  var.sml
compiler/src/pass/: anf_convert.sml  convert_denv.sml  convert_lenv.sml  cps_convert.sml  cps_typecheck.sml  desugar_augs.sml  desugar_binds.sml  desugar_calls.sml  parser.grm
compiler/src/util/: pprint.sml  vector_ext.sml
core/: intrinsics.pcps
doc/: impl.md  spec.md
domain/: Cargo.toml
example/: cat.pcws  fact.prf
example/rosetta/: Factorial.prf  Greatest_common_divisor.prf
example/rosetta/Sorting_algorithms/: Heapsort.prf  Merge_sort.prf  Quicksort.prf
gc/: Cargo.toml
gc/src/: arena.rs  descriptor.rs  lib.rs  util.rs
interpreter/: Cargo.toml
interpreter/src/: ast.rs  continuations.rs  env.rs  eval.rs  grammar.rustpeg  interpreter.rs  lexer.rs  main.rs  object.rs  object_model.rs  parser.lalrpop  value.rs  value_refs.rs
interpreter/src/gce/: arena.rs  block.rs  (+6 more)
lib/Std/: HAMT.pcws
lib/__Bootstrap/: HAMT.pcws  List.pcws  ListTable.pcws  TupleTable.pcws  Types.pcws
lib/core/: core.pcws
piecewise/: piecewise.cabal
piecewise-rt/: Cargo.toml
piecewise-rt/benches/: lib.rs
piecewise-rt/src/: allocator.rs  arena.rs  arena_arr.rs  block.rs  block_arr.rs  descriptor.rs  freelist.rs  freerope.rs  gc.rs  gcref.rs  granule.rs  layout.rs  lib.rs  mark_n_sweep.rs  object_model.rs  util.rs
piecewise/app/: Main.hs
piecewise/src/: AST.hs  Alphatize.lhs  Env.lhs  HoistAugs.lhs  Indentation.lhs  Interpreter.lhs  Lexer.hs  Lexer.x  Ops.hs  Parser.y  PatExpand.lhs  Util.hs
piecewise/src/IR/: AST.hs  CST.hs
piecewise/src/IR/AST/: Hoisted.hs  Initial.hs
piecewise/src/Interpreter/: Cont.lhs  Env.lhs  Value.lhs
piecewise/src/Parsing/: CST.hs  Indentation.lhs  Lexer.x  Parser.y
piecewise/src/Pass/: Alphatize.lhs  HoistAugs.lhs  PatExpand.lhs
rosetta/: Collections.prf  Factorial.prf  Greatest_common_divisor.prf  Stack.prf
rosetta/Queue/: Definition.prf
rosetta/Sorting_algorithms/: Insertion_sort.prf  Merge_sort.prf  Quicksort.prf
rs/: SIMPLIFY.md
rs/domain/: Cargo.toml
rs/interpreter/: Cargo.toml  build.rs
rs/src/: ast.rs  bytecode.rs  gc.rs  lexer.rs  main.rs  parser.lalrpop  util.rs  value.rs
rs/syntax/: Cargo.toml
runtime/src/: block.rs  lib.rs
sml/: makefile
sml/compiler/: .gitignore
sml/interpreter/: .gitignore  makefile
sml/src/: lexer.lex  main.mlb  main.sml  parser.grm  pos.sml  primop.sml
src/: TODO.md  ast.rs  bytecode.rs  cps.rs  expand.rs  flatten.rs  gc.rs  lexer.rs  main.rs  parser.lalrpop  parser.rs  resolve.rs  util.rs  value.rs  vm.rs
src/passes/: cps.rs  flatten.rs
(+117 files in other folders)
