name:                piecewise
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/nilern/piecewise#readme
license:             BSD3
license-file:        ../LICENSE
author:              Pauli Jaakkola
maintainer:          pauli.jaakkola@iki.fi
copyright:           2017 Pauli Jaakkola
category:            Language
build-type:          Simple
extra-source-files:  ../README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable piecewise-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , piecewise
  default-language:    Haskell2010

test-suite piecewise-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , piecewise
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/nilern/piecewise
