name:                piecewise
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/nilern/piecewise#readme
license:             BSD3
license-file:        ../LICENSE
author:              Pauli Jaakkola
maintainer:          pauli.jaakkola@iki.fi
copyright:           2017 Pauli Jaakkola
category:            Language
build-type:          Simple
extra-source-files:  ../README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     AST, Lexer, Indentation, Parser
  other-modules:       Util
  build-depends:       base >= 4.7 && < 5
                       , array >= 0.4 && < 0.6
                       , mtl >= 2.2.0
                       , bytestring >= 0.10
                       , text >= 1.2.0
                       , containers >= 0.5.7
                       , data-default >= 0.7.0
  build-tools:         alex, happy
  default-language:    Haskell2010
  ghc-options:         -Wall

executable piecewise-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , piecewise
                     , bytestring >= 0.10
                     , data-default >= 0.7.0
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite piecewise-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , piecewise
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/nilern/piecewise
